implement simple health endpoint use cron over current loop logic for gc
