# docs/swagger.json
@@ -12,6 +12,21 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/api/v1/health": {
+            "get": {
+                "description": "Returns the health status of the application",
+                "summary": "Get the health status of the application",
+                "operationId": "get-health",
+                "responses": {
+                    "200": {
+                        "description": "Healthy",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/feature_flags": {
             "get": {
                 "description": "get list of current feature flags",
@@ -114,7 +129,7 @@
                             "type": "string"
                         }
                     },
-                    "400": {
+                    "409": {
                         "description": "Invalid request body",
                         "schema": {
                             "type": "string"
@@ -160,7 +175,7 @@
                             "type": "string"
                         }
                     },
-                    "400": {
+                    "409": {
                         "description": "Invalid request body",
                         "schema": {
                             "type": "string"
